<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_gravity="center_vertical"
    tools:context="com.bifi.cellspottingapp.CellSpottingMainActivity" >

    <LinearLayout
    	android:id="@+id/cellImageLayout"
	    android:layout_width="287dp"
    	android:layout_height="214dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
		
		
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/buttonsLayout"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="15dp"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
    	android:layout_below="@id/cellImageLayout">
	    
	    <Button 
	        android:id="@+id/alive_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/alive_button"
	        android:onClick="selectAlive"
	        android:background="@drawable/alive_button"/>
	    
	    <Button 
	        android:id="@+id/dead_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/dead_button"
	        android:onClick="selectDead"
	        android:background="@drawable/dead_button"/>
	    
	    <Button 
	        android:id="@+id/release_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/release_button"
	        android:onClick="selectRelease"
	        android:background="@drawable/release_button"/>
	    
		<Button 
	        android:id="@+id/not_sure_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/not_sure_button"
	        android:onClick="selectNotSure"
	        android:background="@drawable/not_sure_button"/>
	    
	    <Button 
	        android:id="@+id/remove_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/remove_button"
	        android:onClick="selectRemove"
	        android:background="@drawable/remove_button"/>
	    
	    <Button 
	        android:id="@+id/remove_all_select_button"
	        android:layout_width="51dp"
	        android:layout_height="54dp"
	        android:contentDescription="@string/remove_all_button"
	        android:onClick="selectRemoveAll"
	        android:background="@drawable/remove_all_button"/>
	    
	</LinearLayout>
    
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/buttonsLayout"
    	android:layout_marginTop="20dp">
        
         
	<ImageView
        android:id="@+id/progressBarView"
        android:layout_width="177dp"
        android:layout_height="30dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/progress_bar_desc" />
	
	<Button
        android:id="@+id/nextStepView"
        android:layout_width="21dp"
        android:layout_height="30dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/next_step_desc"
        android:onClick="nextStep"
	    android:background="@drawable/next_step_button" />
	</LinearLayout>
	
    

</RelativeLayout>
